--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_core: ^2.27.0
   flutter_local_notifications: ^17.1.2
   flutter_switch: ^0.3.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
