--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   flutter_switch: ^0.3.2
   url_launcher: ^6.3.0
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
